Header con tasti sezione main completato

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
             </div>
         </header>
         <main>
-            
+            <div class="container">
+                <section class="selection">
+                    <button class="blue-button">Add task</button>
+                    <button class="empty-button">Add section</button>
+                </section>
+            </div>
         </main>
     </body>
 </html>
