Aggiunta seconda sezione main

--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
                     <button class="blue-button">Add task</button>
                     <button class="empty-button">Add section</button>
                 </section>
+               
+                <section class="list">
+                    
+                    <h2>&dtrif; New Task</h2>
+                    <ul>
+                        <li>
+                            <span class="circle">&check;</span> Quarterly newsletter
+                            <div class="icon"><small>Editorial</small></div>
+                        </li>
+                    </ul>   
+                </section>
             </div>
         </main>
     </body>
